--- a/src/app/dialog/dialog.component.css
+++ b/src/app/dialog/dialog.component.css
@@ -16,3 +16,11 @@ mat-form-field{
 button{
     margin: 2rem;
 }
+
+
+@media only screen and (max-device-width: 750px) {
+    *{
+        width: 85%;
+        margin: 0 auto;
+    }
+}
